fix(components/Tooltip): Prevent body text from wrapping

--- a/src/components/Tooltip/styles.scss
+++ b/src/components/Tooltip/styles.scss
@@ -31,6 +31,9 @@
   }
 
   .tooltip__body {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     text-align: right;
   }
 }
